# macro-test

./: .gitignore  Cargo.toml  notes.txt
assets/: birboTest.laigter  cloud-test.aseprite  cloud-test.laigter  console.aseprite  console.glb  console.gltf  dremscape8_palette.aseprite  ghosts.aseprite  grass.aseprite  halloween_1.aseprite  halloween_challenge_palette.aseprite  halloween_poster_2.aseprite  kiwi-portrait.aseprite  kiwi.aseprite  level_template.aseprite  pumpkin-house.aseprite  seacreature.aseprite  test-colors.aseprite  wood.aseprite
entities/: axe.ron  birb-npc.ron  cloud.ron  dude.ron  house.ron  kiwi-portrait.ron  kiwi.ron  maker.ron  scripty.lua  walker.lua
scripts/: building.lua  walker.lua
src/: anim.rs  controls.rs  ent.rs  ent_factory.rs  entity.rs  experimental.rs  global.rs  image_helper.rs  imagehelper.rs  layer.rs  logic.rs  lua_define.rs  lua_ent.rs  lua_test.rs  main.rs  menu.rs  shader.frag  shader.rs  shader.vert  shader_loader.rs  test.lua  tester.rs  three_loader.rs  three_test.rs  tile.rs  tile_factory.rs
tiles/: cloud.tile
