[package]
name = "macro-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = "0.3.0-alpha.36"

macroquad = "0.3.6"
rand = "0.8.4"
ron = "0.6.5"
serde ="^1.0"
gltf ="0.16.0"
itertools="0.10.1"
